fixed glitch where select box is behind corners

--- a/css/sudoku.css
+++ b/css/sudoku.css
@@ -25,6 +25,8 @@
 
 #sudoku input:focus {
     outline: 1px solid blue;
+    z-index: 5;
+    position: relative;
 }
 
 /* Chrome, Safari, Edge, Opera */
